# chromatone.center

./: .eslintrc  .eslintrc.js  .gitignore  .markdownlint.yaml  .prettierignore  404.html  404.md  CHANGELOG.html  CHANGELOG.md  CNAME  LICENSE  README.html  README.md  _manifest.json  auto-imports.d.ts  components.d.ts  deploy.sh  feed.rss  hashmap.json  index.html  index.md  jsconfig.json  manifest.webmanifest  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  site_permissions_for_chromatonecenter-1.0-an+fx.xpi  sitemap.xml  sw.js  tauri.conf.json  tsconfig.json  tsup.config.js  vite.config.js  vite.config.lib.js  vite.config.lib.ts  vite.config.ts  vue-mess-detector.json  windi.config.js  windi.config.ts
.codesandbox/: tasks.json
.github/: FUNDING.yml
.vitepress/: config.js  config.ts  tsconfig.json
academy/: index.html  index.md
apps/: chords-tool.md  index.html  index.md
assets/: 404.md.--Z9VFe2.js  404.md.01bfb096.js  404.md.05cfdf3d.js  404.md.069bb319.lean.js  404.md.09bd5309.js  404.md.0BhHdFuL.js  404.md.0WQ7LZ_z.lean.js  404.md.124249f6.js  404.md.15874a67.js  404.md.1bc913a6.js  404.md.1c03fc72.js  404.md.1d89967f.lean.js  404.md.1qPqaymT.js  404.md.1xkXst_T.lean.js  404.md.214294e2.lean.js  404.md.28df62c2.js  404.md.2LUzzajn.js  404.md.2WADtV3u.lean.js  404.md.2c743897.js  404.md.35e3b9d0.js  404.md.38c497b7.lean.js  404.md.38d741d4.js  404.md.3bceb980.js  404.md.3cbd2be8.lean.js  (+109738 more)
src-tauri/: Cargo.toml  README.md  README.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+23073 files in other folders)
